--- a/SCSS-Demo/assets/scss/_footer.scss
+++ b/SCSS-Demo/assets/scss/_footer.scss
@@ -3,23 +3,63 @@
     padding: 84px 0 0;
     background-color: $blue2;
     color: $white;
+    @media(max-width: $large){
+        padding: 60px 0 0;
+    }
+    @media(max-width: $medium){
+        padding: 40px 0 0;
+    }
+    @media(max-width: $small){
+        padding: 30px 0 0;
+    }
     &-inner{
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 1fr;
         gap: 30px;
         margin-bottom: 70px;
+        @media(max-width: $large){
+            margin-bottom: 60px;
+        }
+        @media(max-width: $medium){
+            margin-bottom: 40px;
+        }
         @media(max-width: $small){
             grid-template-columns: repeat(3, minmax(0, 1fr));
+            margin-bottom: 30px;
+        }
+        @media(max-width: $x-small){
+            grid-template-columns: repeat(2, minmax(0, 1fr));
         }
     }
     &-col{
         max-width: 400px;
+       &:first-child{
+        @media(max-width: $small){
+            grid-row: 1;
+            grid-column: 1/4;
+            max-width: inherit;
+        }
+        @media(max-width: $x-small){
+            grid-column: 1/3;
+        }
+       }
+       &:last-child{
+        @media(max-width: $x-small){
+            grid-column: 1/3;
+        }
+       }
     }
     &-logo{
         display: inline-block;
         width: 115px;
         height: 44px;
         margin: 0 0 20px;
+        @media(max-width: $large){
+            margin: 0 0 15px;
+        }
+        @media(max-width: $medium){
+            margin: 0 0 10px;
+        }
         img{
             display: block;
             height: 100%;
@@ -29,10 +69,19 @@
     p{
         font-size: 16px;
         opacity: 0.8;
+        @media(max-width: $small){
+            font-size: 15px;
+        }
     }
     &-menu{
         li{
             margin: 0 0 10px;
+            @media(max-width: $small){
+                margin: 0 0 8px;
+            }
+            @media(max-width: $x-small){
+                margin: 0 0 5px;
+            }
             &:last-child{
                 margin-bottom: 0;
             }
@@ -48,6 +97,12 @@
     }
     .phone{
         margin-top: 20px;
+        @media(max-width: $small){
+            margin-top: 15px;
+        }
+        @media(max-width: $x-small){
+            margin-top: 10px;
+        }
        h4{
             font-size: 15px;
             font-weight: normal;
@@ -57,6 +112,15 @@
         font-size: 19px;
         font-weight: 700;
         opacity: 1;
+        @media(max-width: $large){
+            font-size: 18px;
+        }
+        @media(max-width: $medium){
+            font-size: 17px;
+        }
+        @media(max-width: $small){
+            font-size: 16px;
+        }
        }
     }
     &-bottom{
@@ -67,7 +131,16 @@
         justify-content: space-between;
         gap: 20px;
 
+        @media(max-width: $x-small){
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px 0;
+        }
+
         .copyright-cont{
+            @media(max-width: $x-small){
+                text-align: center;
+            }
             p{
                 font-size: 14px;
             }
