--- a/SCSS-Demo/assets/scss/_mixin.scss
+++ b/SCSS-Demo/assets/scss/_mixin.scss
@@ -36,19 +36,23 @@
 
 @mixin h2{
     font-size: 36px;
+    line-height: 1.3;
     letter-spacing: -0.72px;
     margin: 0 0 30px;
     font-weight: 600;
-    @media(max-width: $large){
+    @media(max-width: $x-large){
         font-size: 32px;
+    }
+    @media(max-width: $large){
+        font-size: 28px;
         margin: 0 0 20px;
     }
     @media(max-width: $medium){
-        font-size: 28px;
+        font-size: 24px;
         margin: 0 0 15px;
     }
     @media(max-width: $small){
-        font-size: 25px;
+        font-size: 22px;
     }
 }
 @mixin h3{
@@ -57,12 +61,35 @@
     line-height: 1.3;
     letter-spacing: -0.48px;
     font-weight: 600;
+    @media(max-width: $large){
+        font-size: 22px;
+        margin: 0 0 20px;
+    }
+    @media(max-width: $medium){
+        font-size: 19px;
+        margin: 0 0 15px;
+    }
+    @media(max-width: $small){
+        font-size: 18px;
+    }
 }
 @mixin h4{
     font-size: 19px;
     line-height: 1.31;
     margin: 0 0 20px;
     font-weight: 600;
+    @media(max-width: $large){
+        font-size: 18px;
+        margin: 0 0 18px;
+    }
+    @media(max-width: $medium){
+        font-size: 17px;
+        margin: 0 0 15px;
+    }
+    @media(max-width: $small){
+        font-size: 16px;
+        margin: 0 0 12px;
+    }
 }
 
 
@@ -73,8 +100,5 @@
     }
     @media(max-width: $medium){
         padding: 40px 0;
-    }
-    @media(max-width: $small){
-        padding: 30px 0;
     }
 }
