--- a/SCSS-Demo/assets/scss/style.scss
+++ b/SCSS-Demo/assets/scss/style.scss
@@ -15,16 +15,20 @@
     display: flex;
     align-items: flex-end;
     background: linear-gradient(74deg, rgba(122,61,247,1) 0%, rgba(232,123,156,1) 100%);
+
+    @media(max-width: $medium){
+        padding: 150px 0 0;
+        min-height: inherit;
+    }
     figure{
-        // position: absolute;
         width: calc(45% - 15px);
         height: 100%;
-        // right: 0;
-        // bottom: 0;
-        // top: 170px;
-        @media(max-width: $medium){
+        position: relative;
+        z-index: 2;
+        @media(max-width: $small){
             margin: 0 auto;
-            width: 360px;
+            width: 100%;
+            max-width: 400px;
         }
 
         img{
@@ -50,6 +54,9 @@
             position: relative;
             color: $white;
             z-index: 2;
+            @media(max-width: $small){
+                padding-bottom: 0;
+            }
             &::before{
                 content: '';
                 position: absolute;
@@ -70,10 +77,18 @@
         p{
             line-height: 1.5;
             margin-bottom: 45px;
+            @media(max-width: $large){
+                margin: 0 0 35px;
+            }
+            @media(max-width: $medium){
+                margin: 0 0 25px;
+            }
+            @media(max-width: $small){
+                margin: 0 0 20px;
+            }
         }
     }
 }
-
 
 // testimonial section
 .testimonial-section{
@@ -94,6 +109,7 @@
     }
     .testim-slide{
         padding: 0 12px;
+        
     }
     .testim-slide-inn{
         padding: 36px;
@@ -106,6 +122,20 @@
         gap: 24px;
         height: 100%;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+        opacity: 0.5;
+        filter: blur(2px);
+        transition: all 0.3s ease-in-out;
+        @media(max-width: $large){
+            padding: 30px;
+        }
+        @media(max-width: $medium){
+            padding: 25px;
+            gap: 20px;
+            border-radius: 16px;
+        }
+        @media(max-width: $medium){
+            gap: 16px;
+        }
         .stars{
             display: flex;
             align-items: center;
@@ -114,14 +144,26 @@
         }
         p{
             font-size: 16px;
-            line-height: 1.25;
+            line-height: 1.4;
             margin: 0;
+            @media(max-width: $small){
+                font-size: 15px;
+            }
         }
         .author{
             font-weight: 600;
             font-size: 15px;
             line-height: 1.33;
             color: $blue1;
+        }
+    }
+    .testim-slide{
+        &.slick-active{
+            .testim-slide-inn{
+                opacity: 1;
+                visibility: visible;
+                filter: blur();
+            }
         }
     }
     .feature{
@@ -139,6 +181,7 @@
             }
 
             h3{
+                margin: 0;
                 @media(max-width: $medium){
                     text-align: center;
                 }  
@@ -154,6 +197,14 @@
                 gap: 20px 25px;
             }
         }
+        &-slide{
+            max-height: 80px;
+            text-align: center;
+            img{
+                max-height: 100%;
+                width: auto;
+            }
+        }
     }
 }
 
@@ -161,6 +212,9 @@
 .security{
     &-sec{
         @include sectionPadding;
+        @media(max-width: $large){
+            padding-top: 50px;
+        }
         &-inn{
             display: grid;
             grid-template-columns: auto 482px;
@@ -176,9 +230,13 @@
             }
             @media(max-width: $medium){
                 grid-template-columns: 1fr;
+                margin-bottom: 40px;
             }
             figure{
                 position: relative;
+                // img{
+                //     display: block;
+                // }
                 @media(max-width: $medium){
                     max-width: 475px;
                     margin: 0 auto;
@@ -193,6 +251,11 @@
                     top: -15px;
                     background: linear-gradient(74deg, rgb(122, 61, 247) 0%, rgb(232, 123, 156) 100%);
                     z-index: -1;
+                    animation: cardEffect 8s 3s infinite;
+                    @media(max-width: $medium){
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
             &:nth-child(2n){
@@ -204,6 +267,10 @@
                     order: -1;
                     &::before{
                         left: -15px;
+                        animation-direction: reverse;
+                        @media(max-width: $medium){
+                            animation-direction: normal;
+                        }
                     }
                 }
             }
@@ -214,7 +281,6 @@
     }
 }
 
-
 // freedon section
 .freedom{
     &-sec{
@@ -224,6 +290,11 @@
         h2{
             max-width: 840px;
             margin-inline: auto;
+            br{
+                @media(max-width: $small){
+                    display: none;
+                }
+            }
         }
     }
     &-inner{
